# exchange-core

./: .dockerignore  .gitignore  CLAUDE.md  CODE_SMELLS.md  Cargo.toml  Dockerfile  LICENSE  README.md  plan.md  review.md
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/workflows/: cla.yml
crates/admin/: Cargo.toml
crates/admin/src/: keygen.rs  main.rs  promote.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/bench/: Cargo.toml  README.md
crates/bench/src/: dpdk.rs  generator.rs  health_poller.rs  journal_writer_bench.rs  main.rs  plot.rs  rumcast.rs  stats_client.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  tcp.rs
crates/core/app/: Cargo.toml
crates/core/app/src/: app_factory.rs  lib.rs
crates/core/disruptor/: Cargo.toml
crates/core/dpdk/: Cargo.toml  build.rs
crates/core/journal/: Cargo.toml
crates/core/pipeline/: Cargo.toml
crates/core/server-runtime/: Cargo.toml
crates/core/transport-core/: Cargo.toml
crates/core/wire-protocol/: Cargo.toml
crates/disruptor/: Cargo.toml
crates/disruptor/src/: ring.rs  spsc.rs
crates/dpdk/: Cargo.toml  build.rs
crates/dpdk/src/: device.rs  eal.rs  ffi.rs  inline_wrappers.c  lib.rs  mempool.rs  port.rs  transport.rs
crates/engine/: Cargo.toml
crates/engine/examples/: journal_verify.rs
crates/engine/src/: account.rs  application_impl.rs  exchange.rs  fuzz_tests.rs  le.rs  lib.rs  orderbook.rs  proptests.rs  scheduler.rs  trading_event.rs  types.rs
crates/engine/src/journal/: codec.rs  engine.rs  error.rs  event.rs  mod.rs  pipeline.rs  pipeline_tests.rs  reader.rs  replication.rs  snapshot.rs  writer.rs
crates/examples/counter/: Cargo.toml
crates/examples/counter/src/: lib.rs  main.rs
crates/examples/counter/tests/: round_trip.rs
crates/exchange/: README.md
crates/exchange/admin/: Cargo.toml
crates/exchange/bench/: Cargo.toml
crates/exchange/client/: Cargo.toml
crates/exchange/engine/: Cargo.toml
crates/exchange/exchange-core/: Cargo.toml
crates/exchange/gateway-core/: Cargo.toml
crates/exchange/market-data/: Cargo.toml
crates/exchange/market-data/src/: cold_start.rs  core.rs  trade_ring.rs
crates/exchange/md-gateway/: Cargo.toml
crates/exchange/oe-gateway/: Cargo.toml
crates/exchange/protocol/: Cargo.toml
crates/exchange/protocol/src/: codec.rs  lib.rs
crates/exchange/protocol/tests/: fuzz.rs
crates/exchange/server/: Cargo.toml
crates/exchange/trading/: Cargo.toml
crates/exchange/trading-server/: Cargo.toml
crates/exchange/trading/src/: trading_event.rs
crates/exchange/tui/: Cargo.toml
crates/exchange/tui-fix-client/: Cargo.toml
crates/exchange/types/: Cargo.toml
crates/fix-gateway/src/: config.rs  event_loop.rs  main.rs  metrics.rs  session.rs  translate.rs
crates/gateway/: Cargo.toml
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: auth.rs
crates/gateway/src/: main.rs  proxy.rs
crates/journal/: Cargo.toml
crates/journal/src/: buffered_writer.rs  codec.rs  fresh_replica.rs  journal_writer.rs  le.rs  lib.rs  preparer.rs  reader.rs  sector_writer.rs  segment.rs  writer.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: cold_start.rs  core.rs  index.rs  lib.rs  mirror.rs  proptests.rs  subscriber.rs  trade_ring.rs
crates/md-gateway/: Cargo.toml
crates/md-gateway/src/: config.rs  event_loop.rs  main.rs  translate.rs
crates/noop/: Cargo.toml
crates/noop/src/: lib.rs
crates/noop/tests/: pipeline.rs
crates/oe-gateway/: Cargo.toml
crates/oe-gateway/src/: event_loop.rs  session.rs  test_stub.rs  translate.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: auth.rs  blocking.rs  codec.rs  error.rs  fuzz_tests.rs  lib.rs  message.rs  tcp.rs  transport.rs  uds.rs
crates/rumcast/: Cargo.toml
crates/rumcast/src/: io_uring_endpoint.rs  lib.rs  muxed_receiver.rs  muxed_sender.rs  pub_log.rs  receiver.rs  sender.rs  shared_udp.rs  sub_log.rs  transport.rs  wire.rs
crates/server/: Cargo.toml
crates/server/src/: admin.rs  affinity.rs  amortized_timer.rs  dpdk_response.rs  dpdk_transport.rs  durability_policy.rs  engine.rs  event_publisher.rs  health.rs  lib.rs  main.rs  promote.rs  reader.rs  replication.rs  request.rs  response.rs  rumcast_transport.rs  server.rs  session.rs  shadow.rs  tick.rs  uring_reader.rs  uring_response.rs
crates/server/tests/: failover.rs  rumcast_smoke.rs
crates/trading/: Cargo.toml
crates/trading/src/: lib.rs  trading_event.rs  types.rs
crates/transport-core/: Cargo.toml
crates/transport-core/src/: journaled_app.rs  lib.rs  pipeline.rs  replication_wire.rs  snapshot.rs
crates/tui/: Cargo.toml
crates/tui-fix-client/: Cargo.toml
crates/tui-fix-client/src/: bot.rs  fix_client.rs  main.rs
crates/tui/src/: main.rs
docker/: entrypoint.sh
docs/: admin-guide.md  benchmarking.md  doc-audit.md  dpdk-test-guide.md  durability-policy-followups.md  fee-model.md  input-replication-plan.md  journal-rotation.md  journal-writer-modes.md  journal.md  lan_demo_plan.md  latency-improvements.md  matching-engine.md  oe-gateway.md  operations.md  performance.md  pipeline-architecture.md  replication.md  risk-checks.md  roadmap.md  security-audit.md  split-gateways-md-plan.md  wire-protocol.md
docs/internal/: bullet-differential-testing.md  journal-writer-refactor.md
scripts/: admin-demo.sh  bench-isolate.sh  cherry-setup.sh  dpdk-cherry-test.sh  dpdk-e2e-smoke-test.sh  dpdk-e2e-test.sh  dpdk-lan-bench.sh  dpdk-server.sh  dpdk-setup-sriov.sh  dpdk-setup-standalone.sh  dpdk-setup.sh  dpdk-smoke-test.sh  grub-bench.conf  journal-verify.sh  lan-bench-suite.sh  lan-bench.sh  publish.sh  run-tui.sh  server-deploy.sh  server-setup.sh  smoke-test.sh  test-bench-suite.sh  test-containers-start.sh  test-containers-stop.sh  xdp-veth-setup.sh
scripts/dpdk/: dpdk-e2e-smoke-test.sh  dpdk-lan-bench.sh  dpdk-replication-smoke-test.sh  dpdk-server.sh  dpdk-setup-sriov.sh  dpdk-setup.sh  dpdk-smoke-test.sh  dpdk-tap-replication-smoke-test.sh  dpdk-test.sh  dpdk-virtio-smoke-test.sh
src/: exchange.rs  lib.rs  orderbook.rs  types.rs
(+147 files in other folders)
