[package]
name = "trading-bench"
version = "0.1.0"
edition = "2024"

[features]
no-fsync = ["trading-engine/no-fsync"]
latency-trace = ["trading-server/latency-trace"]

[[bin]]
name = "trading-bench"
path = "src/main.rs"

[dependencies]
trading-engine = { path = "../engine" }
trading-protocol = { path = "../protocol" }
trading-server = { path = "../server" }
hdrhistogram = "7"
# Minimal tokio — only needed for the server accept loop running in a
# background thread. The benchmark client uses pure blocking I/O.
tokio = { version = "1", features = ["rt", "net", "io-util"] }
