[package]
name = "trading-engine"
version = "0.1.0"
edition = "2024"

[features]
## Skip all fsync calls in the journal writer. Unsafe for production — data
## will not survive crashes — but useful for benchmarking to isolate I/O cost.
no-fsync = []

[dependencies]
crc32c = "0.6"
libc = { workspace = true }
trading-disruptor = { path = "../disruptor" }

[dev-dependencies]
tempfile = "3"
