[package]
name = "trading-engine"
version = "0.1.0"
edition = "2024"

[features]
## Skip all fsync calls in the journal writer. Unsafe for production — data
## will not survive crashes — but useful for benchmarking to isolate I/O cost.
no-fsync = []
## Record per-stage latency histograms and print a summary on shutdown.
## Adds ~20ns of clock overhead per event. Not for production.
latency-trace = ["dep:hdrhistogram"]
## Use io_uring for async fsync in the journal stage. Linux-only.
## Overlaps fsync I/O wait with encoding the next batch for higher throughput.
io-uring = ["dep:io-uring"]

[dependencies]
crc32c = "0.6"
hdrhistogram = { version = "7", optional = true }
io-uring = { version = "0.7", optional = true }
libc = { workspace = true }
trading-disruptor = { path = "../disruptor" }

[dev-dependencies]
tempfile = "3"
