[package]
name = "melin-gateway"
version = "0.1.0"
edition = "2024"

[lib]
name = "melin_gateway"
path = "src/lib.rs"

[[bin]]
name = "melin-gateway"
path = "src/main.rs"

[dependencies]
melin-protocol = { path = "../protocol" }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }
tracing-subscriber = { workspace = true }
