[package]
name = "melin-rumcast"
version = "0.4.0"
edition = "2024"

[lib]
name = "melin_rumcast"
path = "src/lib.rs"

[dependencies]
# Zero-copy decode of frame headers from received UDP packets. Headers are
# read on every packet on the hot path, so we want a `&[u8] -> &Header` cast
# rather than per-field byte copies. bytemuck's `Pod`/`Zeroable` derives give
# us the alignment + no-padding guarantees safely. Tiny dep, no transitive
# deps, well-maintained.
bytemuck = { version = "1", features = ["derive"] }
