[package]
name = "melin-example-counter"
version = "0.1.0"
edition = "2024"
license-file.workspace = true
description = "Minimal example: a durable, replicated counter built on the Melin core runtime."
publish = false

[lib]
name = "counter_server"
path = "src/lib.rs"

[[bin]]
name = "counter-server"
path = "src/main.rs"

[dependencies]
melin-app = { path = "../../core/app" }
melin-server-runtime = { path = "../../core/server-runtime" }
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
melin-wire-protocol = { path = "../../core/wire-protocol" }
tempfile = "3"

[features]
default = []
hash-chain = ["melin-server-runtime/hash-chain"]
no-o-direct = ["melin-server-runtime/no-o-direct"]
