[package]
name = "melin-market-data"
version = "0.9.0"
edition = "2024"
license.workspace = true

[dependencies]
melin-types = { path = "../types" }
melin-protocol = { path = "../protocol" }
melin-wire-protocol = { path = "../../core/wire-protocol" }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
astenn = "0.1"
rustc-hash = "2"

[dev-dependencies]
proptest = "1"
