[package]
name = "melin-trading"
version = "0.11.0"
edition = "2024"
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared trading wire types used by both matching engine and transport"

[lib]
name = "melin_trading"
path = "src/lib.rs"

[dependencies]
melin-app = "0.11.0"
melin-types = { path = "../types", version = "0.11.0" }
